# astrothesispy

./: .gitignore  LICENSE  README.ipynb  README.md  __init__.py  paper_figures.py  pyproject.toml  pythoncodeblocks.tpl  thesis_figures.py
Figures/readme_logos/: DOI_logo.svg:Zone.Identifier  arxiv-logo.svg:Zone.Identifier  arxiv-logomark-small.svg:Zone.Identifier
HC3N/: HC3N_enerdiag.py
HC3N/CDMS/: HC3Nv0_c051501.cat  HC3Nv21_c051520.cat  HC3Nv31_c051519.cat  HC3Nv41_c051506.cat  HC3Nv41v71_c051507.cat  HC3Nv41v72v52_c051509.cat  HC3Nv51v73_c051508.cat  HC3Nv61_c051504.cat  HC3Nv61v71_c051505.cat  HC3Nv62_c051526.cat  HC3Nv71_c051502.cat  HC3Nv72_c051503.cat  HC3Nv74v51v71_c051525.cat
HC3N/CDMS/sub/: HC3Nv0.cat  HC3Nv21.cat  HC3Nv31.cat  HC3Nv41.cat  HC3Nv41v71.cat  HC3Nv41v72v52.cat  HC3Nv51v73.cat  HC3Nv61.cat  HC3Nv61v71.cat  HC3Nv62.cat  HC3Nv71.cat  HC3Nv71_KK.cat  HC3Nv72.cat  HC3Nv74v51v71.cat
NGC253_HR_paper/: paper_figures.py
data/NGC253_HR/Continuums/SHC_13/: MAD_CUB_219GHz_continuum.I.image.pbcor_SHC_13_pycut_coord.fits
data/NGC253_HR/Results/: SHC_13_SLIM_Tex_and_logN_profiles.csv
hc3n/: HC3N_enerdiag.py
helpers/: nLTEmodel_helper.py
radiative_transfer/: NGC253HR_nLTE_modelresults.py  nLTE_others.txt  nLTE_properties.py
scripts/: NGC253HR_SLIMfigs.py  NGC253HR_compfigs  NGC253HR_compfigs.py  NGC253HR_contfigs.py  NGC253HR_nLTEfigs.py  NGC253HR_ringfigs.py
utiles/: Madcuba_plotter.py  u_conversion.py  utiles.py  utiles_alma.py  utiles_cubes.py  utiles_molecules.py  utiles_nLTEmodel.py  utiles_physical.py  utiles_plot.py
(+1255 files in other folders)
